--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "appearin-sdk": "0.0.4",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
-    "nodemon": "^1.11.0"
+    "morgan": "^1.7.0",
+    "nodemon": "^1.11.0",
+    "twilio-video": "^1.0.0-beta4"
   }
 }
